labs/day02/virtual-service-reviews-v3.yaml
# virtual-service-reviews-ab.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - route:
        - destination:
            host: reviews
            subset: v2
          weight: 33
        - destination:
            host: reviews
            subset: v1
          weight: 33
        - destination:
            host: reviews
            subset: v3
          weight: 34
